# wereWolf-py

./: .env  .gitignore  CLAUDE.md  pyproject.toml  run.sh
configs/: classic-9p.yaml  default-8p.yaml
docs/superpowers/plans/: 2026-05-16-agent-speech-quality.md
docs/superpowers/specs/: 2026-05-16-agent-speech-quality-design.md
public/: app.js  index.html  styles.css
src/: config_loader.py  game.py  llm.py  logger.py  main.py  models.py  prompts.py  styles.py
tests/: test_api.py  test_config_loader.py  test_game.py  test_integration.py  test_llm.py  test_logger.py  test_models.py  test_prompts.py
tests/e2e/: conftest.py  test_e2e.py  test_full_game.py  test_full_game_9p.py
tests/fixtures/: classic-9p.yaml  default-8p.yaml
